vlib/v/checker/tests/void_method_call.out
vlib/v/checker/tests/void_method_call.vv:5:17: cgen error: checker bug; CallExpr.left_type is 0 in method_call
    3 | 
    4 | fn main() {
    5 |     simple_fn().method()
      |                 ~~~~~~~~
    6 | }
